--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 flate2 = "1.0.26"
+indicatif = "0.17.6"
+prog_rs = "0.2.0"
 quick-xml = { version = "0.30.0", features = ["tokio", "serde", "serde-types", "serialize"] }
 serde = "1.0.183"
 sqlx = {version = "0.7.1", features = ["runtime-tokio", "postgres"] }
