--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ indicatif = "0.17.6"
 prog_rs = "0.2.0"
 quick-xml = { version = "0.30.0", features = ["tokio", "serde", "serde-types", "serialize"] }
 serde = "1.0.183"
-sqlx = {version = "0.7.1", features = ["runtime-tokio", "postgres"] }
-tokio = "1.29.1"
+sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "sqlite"] }
+tokio = { version = "1.29.1", features = ["full"] }
