--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ quick-xml = { version = "0.30.0", features = ["tokio", "serde", "serde-types", "
 serde = "1.0.183"
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "sqlite", "time", "ipnetwork", "chrono"] }
 tokio = { version = "1.29.1", features = ["full"] }
+url = "2.4.0"
